removed tikka and dependency